Fix spacing issue for limitations list when width<850

--- a/src/Stylesheets/Responsive.css
+++ b/src/Stylesheets/Responsive.css
@@ -91,5 +91,6 @@
   }
 
   .limitations-list {
+    margin-right: 35px;
   }
 }
